<resources>
    <string name="app_name">Gasflow</string>
    <string name="wireless">Wireless network connectivity</string>
    <string name="cellular">Cellular network connectivity</string>
    <string name="enable_disable">Shows or hides the notification icon</string>
    <string name="enable_switch">Enabled</string>
    <string name="lockscreen_summary">Show the notification in the lockscreen when the device is locked</string>
    <string name="lockscreen_title">Publicly visible</string>
    <string name="lowpower_title">Disable on low battery</string>
    <string name="lowpower_summary">Disable the notification and the service when the device\'s battery is low or when the power saving mode is enabled</string>
    <string name="color_summary">Background color of the notification icon</string>
    <string name="color_title">Color</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report</string>
    <string name="crash_notif_title">Throttle has crashed…</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
</resources>
