<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:defaultValue="true"
        android:key="enabled"
        android:summary="@string/enable_disable"
        android:title="@string/enable_switch"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="lockscreen"
        android:summary="@string/lockscreen_summary"
        android:title="@string/lockscreen_title"/>
    <com.mridang.colorpicker.ColorPreference
        android:defaultValue="@android:color/transparent"
        android:key="color"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/color_summary"
        android:title="@string/color_title"
        app:itemLayout="@layout/dash_grid_item_color"
        app:numColumns="5"/>
</PreferenceScreen>
